--- a/w_player/v19/styles.css
+++ b/w_player/v19/styles.css
@@ -175,4 +175,8 @@ body {
 .reason-window button:hover {
     background-color: #0056b3;
 }
+.button {
+      margin-right: 10px;
+      padding: 10px 20px;
+    }
 
