--- a/w_player/v19/styles.css
+++ b/w_player/v19/styles.css
@@ -176,7 +176,8 @@ body {
     background-color: #0056b3;
 }
 .button {
-      margin-right: 10px;
-      padding: 10px 20px;
+    padding: 5px 10px;
+    margin-top: 10px;
+
     }
 
