--- a/w_player/v19/styles.css
+++ b/w_player/v19/styles.css
@@ -76,7 +76,6 @@ body {
 .register-btn {
     padding: 5px 10px;
     margin-top: 10px;
-    height: 40px; 
     cursor: pointer;
 }
 .stopwatch {
@@ -179,7 +178,7 @@ body {
 .button {
     padding: 5px 10px;
     margin-top: 10px;
-    height: 100px; 
+    cursor: pointer;
 
     }
 
