--- a/w_player/v20/styles.css
+++ b/w_player/v20/styles.css
@@ -98,8 +98,10 @@ body {
 }
 
 #timeDisplay {
-    font-size: 36px; /* 時間表示の文字を大きくする */
+    font-size: 48px; /* 時間表示の文字を大きくする */
     font-weight: bold;
+    color: #006747; /* ダークグリーン */
+    text-shadow: 2px 2px 4px #FFD100; /* 黄色のシャドウ */
 }
 
 .buttons {
