--- a/w_player/v21/styles.css
+++ b/w_player/v21/styles.css
@@ -188,6 +188,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
     text-align: center;
+    width: 300px;
 }
 
 /* 理由ウィンドウのボタン */
@@ -199,6 +200,7 @@ body {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+
 }
 .reason-window button:hover {
     background-color: #0056b3;
