--- a/w_player/v21/styles.css
+++ b/w_player/v21/styles.css
@@ -129,7 +129,7 @@ body {
     align-items: center;
 }
 .modal-content {
-    background-color: #f0f0f0;
+    background-color: #006747;
     padding: 20px;
     border: 1px solid #888;
     width: 300px;
@@ -149,7 +149,7 @@ body {
     justify-content: space-between;
     padding: 10px;
     margin: 5px 0;
-    background-color:#f0f0f0;
+    background-color: #f0f0f0;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -165,7 +165,7 @@ body {
 /* 追記ボタン */
 .append-button {
     padding: 5px 10px;
-    background-color: #f0f0f0;
+    background-color: #006747;
     color: white;
     border: none;
     border-radius: 3px;
@@ -195,7 +195,7 @@ body {
 .reason-window button {
     margin: 5px;
     padding: 10px 20px;
-    background-color: #f0f0f0;
+    background-color: #006747;
     color: white;
     border: none;
     border-radius: 3px;
