--- a/w_player/styles.css
+++ b/w_player/styles.css
@@ -182,6 +182,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
+    width: 500px; /* 横幅を広げる */
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -194,11 +195,12 @@ body {
 .reason-window button {
     margin: 5px;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color:  #007bff;
     color: white;
     border: none;
     border-radius: 3px;
     cursor: pointer;
+
 }
 .reason-window button:hover {
     background-color: #0056b3;
