--- a/w_player/v25/styles.css
+++ b/w_player/v25/styles.css
@@ -10,6 +10,7 @@ body {
 .container {
     display: flex;
     justify-content: space-between;
+    margin-left: 250px;
     width: 90%;
     max-width: 1000px;
     margin-top: 20px;
@@ -93,13 +94,11 @@ body {
 .stopwatch {
     margin-top: 20px;
     font-size: 20px;
+    width: 180px;
     display: flex;
     flex-direction: column;
-    /* 子要素を縦並びにする */
     align-items: center;
-    /* 水平方向に中央揃え */
     gap: 10px;
-    /* 要素間の間隔 */
     position: fixed;
     top: 20px;
     left: 20px;
@@ -325,7 +324,7 @@ body {
     position: fixed;
     top: 20px;
     right: 20px;
-    width: 300px;
+    width: 290px;
     /* 固定幅 */
     display: flex;
     flex-direction: column;
